--- a/app/admin/templates/pages/student-applications/student_application_list.html
+++ b/app/admin/templates/pages/student-applications/student_application_list.html
@@ -56,7 +56,7 @@
                                     {{ std.student_cid}}
                                 </td>
                                 <td class="budget">
-                                    {{ std.first_name }}
+                                    {{ std.first_name }} {{ std.last_name }}
                                 </td>
                                 <td class="budget">
                                   {{ std.first_name }}
