--- a/app/home/templates/contact_us.html
+++ b/app/home/templates/contact_us.html
@@ -10,13 +10,15 @@ integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jI
 {% endblock stylesheets %}
 
 {% block content %}
+<div class="container">
 <ol class="breadcrumb ">
     <li><a href="{{url_for('home_blueprint.route_default')}}"><i class="fa fa-home" style="font-size: 15px;">
                 Home</i></a></li>
-    <li class="active" style="font-size: 13px;"> Fees 2022 Academic Session</li>
+    <li class="active" style="font-size: 13px;"> Contact us for more help</li>
 </ol>
-<hr> <br><br>
-<div class="container">
+<hr style="position: relative; top: 3px; border: none; height: 2px; background: black;">				
+<br><br>
+
     <h1 class="header-title"> CONTACT US</h1>
     <div class="col-sm-12" id="parent"> <br><br>
         <div class="col-sm-7">
@@ -51,8 +53,6 @@ integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jI
             </form>
         </div>
     </div>
-    </div>
-    
     <div class="col-xs-12 col-sm-6 col-lg-4"> <br><br>
         <div class="box">
             <div class="icon">
