--- a/app/home/templates/std_fee.html
+++ b/app/home/templates/std_fee.html
@@ -6,12 +6,13 @@
 {% endblock stylesheets %}
 
 {% block content %}
+<div class="container">
 <ol class="breadcrumb ">
 	<li><a href="{{url_for('home_blueprint.route_default')}}"><i class="fa fa-home" style="font-size: 15px;">
 				Home</i></a></li>
-	<li class="active" style="font-size: 13px;"> Fees 2022 Academic Session</li>
+	<li class="active" style="font-size: 13px;"> Fees Structure 2022</li>
 </ol>
-<hr> 
+<hr style="position: relative; top: 3px; border: none; height: 2px; background: black;">				
 <br><br>
     <div class="container">
         <div class="row">
@@ -112,6 +113,7 @@
             </div>
         </div>
     </div>
+</div>
     <br><br>
    
 
