--- a/app/admin/templates/pages/user-management/user-list.html
+++ b/app/admin/templates/pages/user-management/user-list.html
@@ -4,7 +4,7 @@
 <!-- Specific CSS goes HERE -->
 {% block stylesheets %}
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 {% endblock stylesheets %}
 
 {% block content %}
@@ -26,7 +26,8 @@ integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jI
                         <div class="card-body">
                             <div class="row">
                                 <div class="table-responsive">
-                                    <table class="table align-items-center table-flush" id="customerList" style="width: 100%;">
+                                    <table class="table align-items-center table-flush" id="customerList"
+                                        style="width: 100%;">
                                         <thead class="thead-light">
                                             <tr>
                                                 <th scope="col" class="sort" data-sort="name">SL</th>
@@ -39,42 +40,33 @@ integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jI
                                         <tbody class="list">
                                             {% for users in user %}
                                             <tr>
-                                                <th scope="row">
-                                                    {{ loop.index }}
-                                                </th>
-                                                <th scope="row">
+                                                <td scope="row">
+                                                    {{ users.index }}
+                                                </td>
+                                                <td scope="row">
                                                     {{ users.username }}
-                                                </th>
+                                                </td>
                                                 <td class="budget">
                                                     {{ users.email}}
                                                 </td>
                                                 <td class="budget">
                                                     {{ users.role }}
                                                 </td>
-
                                                 <td class="text-right">
                                                     <div class="dropdown">
-                                                        <a class="btn btn-sm btn-icon-only text-light" href="#"
-                                                            role="button" data-toggle="dropdown" aria-haspopup="true"
-                                                            aria-expanded="false">
-                                                            <i class="fas fa-ellipsis-v"></i>
-                                                        </a>
-                                                        <div
-                                                            class="dropdown-menu dropdown-menu-right dropdown-menu-arrow">
-                                                            <a class="dropdown-item"
-                                                                href="/user/{{ users.user_id }}">View</a>
-                                                            <a class="dropdown-item" href="javascript:void(0)"
-                                                                onclick="deleteUser('{{ users.user_id }}')">Delete</a>
-                                                        </div>
+                                                        <a class="btn btn-primary text-light"  title="Edit"
+                                                            data-toggle="modal" data-target="#exampleModal"
+                                                            role="button"> <i class="fas fa-ellipsis-v">Edit</i></a>
+                                                        <a class="btn btn-sm btn-danger text-light" role="button"
+                                                            title="Delete" data-toggle="tooltip" href="/delete_user/{{users.user_id}}"  onclick="deleteUser('{{users.user_id}}')">
+                                                            <i class="fas fa-ellipsis-v">Delete</i></a>
                                                     </div>
                                                 </td>
                                             </tr>
                                             {% endfor %}
                                         </tbody>
                                     </table>
-
                                 </div>
-
                             </div>
                         </div>
                     </div>
@@ -82,16 +74,56 @@ integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jI
             </div>
         </div>
     </div>
-    <!-- content-wrapper ends -->
-    <!-- partial:../../partials/_footer.html -->
-
-    <!-- partial -->
 </div>
-<!-- main-panel ends -->
-
-<!-- page-body-wrapper ends -->
-<!-- container-scroller -->
-<!-- plugins:js -->
+<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+    aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel"></h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <div class="pl-lg-4">
+                    <div class="row">
+                        <div class="col-lg-6">
+                            <div class="form-group">
+                                <label class="form-control-label" for="username">Username</label>
+                                <input type="text" name="username" id="username" class="form-control"
+                                    placeholder="Username" autocomplete="off">
+                            </div>
+                        </div>
+                        <div class="col-lg-6">
+                            <div class="form-group">
+                                <label class="form-control-label" for="email">Email address</label>
+                                <input type="email" name="email" id="email" class="form-control"
+                                    placeholder="email address" autocomplete="off">
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-lg-6">
+                                <div class="form-group">
+                                    <label class="form-control-label" for="username">Role</label>
+                                    <select name="grade" id="class" class="form-control">
+                                        <option value="">---select---</option>
+                                        <option value="">Class Teacher</option>
+                                        <option value="">Administrator</option>
+                                    </select>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-primary">Update</button>
+            </div>
+        </div>
+    </div>
+</div>
 {% endblock content %}
 
 <!-- Specific JS goes HERE -->
@@ -122,14 +154,14 @@ integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jI
                 {
                     "render": function (data, type, full, meta) {
                         return '<div class="dropdown">' +
-                            '<a class="btn btn-sm btn-icon-only text-light" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="background:orange">' +
-                            '<i class="fas fa-ellipsis-v"><b>Click</b></i>' +
+                            '<a class="btn btn-primary btn-icon-only text-light" href="' + full.id + '" onclick="edit_userlist" role="button" style="height: auto; display: inline-block;" data-toggle="modal" data-target="#exampleModal" >' +
+                            '<b> Edit </b >' +
                             '</a>' +
-                            '<div class="dropdown-menu dropdown-menu-right dropdown-menu-arrow">' +
-                            '<a class="dropdown-item" href="/user/' + full.id + '">View</a>' +
-                            '<a class="dropdown-item" href="javascript:void(0)" onclick="deleteUser(' + full.id + ')">Delete</a>' +
-                            '</div>' +
+                            '   <a class="btn btn-danger btn-icon-only text-light" href=""  onclick="deleteUser('+full.id+')" role="button">' +
+                            '<b>Delete</b>' +
+                            '</a>' +
                             '</div>'
+
                     }
                 },
             ],
@@ -144,8 +176,41 @@ integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jI
     }
 
 
+    // update user list----------------
+    $("#edit_userlist").click(function () {
+        var form_data = new FormData($('#add_student')[0])
+        $.ajax({
+            type: "POST",
+            url: "/update-user-list",
+            data: form_data,
+            contentType: false,
+            cache: false,
+            processData: false,
+
+            success: function (data) {
+                if (data === "error") {
+                    swal('Error', 'Could Not Add Student', 'error').then(function () {
+                        location.reload()
+                    })
+                } else {
+                    swal('Success', 'Student Successfully Added', 'success').then(function () {
+                        window.location = "/get-std-list"
+                    })
+                }
+
+            },
+            error: function () {
+                swal('Error', 'Could Not Add Student', 'error').then(function () {
+                    location.reload()
+                })
+            }
+        });
+    });
+
+
     // for deleting
     function deleteUser(id) {
+        alert("hui")
         swal({
             title: "Are you sure?",
             text: "You will not be able to recover this data!",
@@ -176,6 +241,7 @@ integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jI
             }
         })
     }
+
 
 </script>
 {% endblock javascripts %}
