--- a/app/home/templates/enroll_student.html
+++ b/app/home/templates/enroll_student.html
@@ -6,13 +6,14 @@
 {% endblock stylesheets %}
 
 {% block content %}
+<div class="container">
+
 <ol class="breadcrumb ">
 	<li><a href="{{url_for('home_blueprint.route_default')}}"><i class="fa fa-home" style="font-size: 15px;">
 				Home</i></a></li>
 	<li class="active" style="font-size: 13px;">Student Registration</li>
 </ol>
-<hr>
-<div class="container">
+<hr style="position: relative; top: 3px; border: none; height: 2px; background: black;">				
 	<h4 class="well">
 		<img src="../static/admin_images/faces/uahead.png">
 		<hr>
@@ -348,8 +349,6 @@
 
 		</form>
 	</div>
-	
-	
 </div>
 
 
