--- a/app/home/templates/std_result.html
+++ b/app/home/templates/std_result.html
@@ -1,104 +1,204 @@
-{% extends 'layouts/enroll_main.html' %}
+<body>
+    {% extends 'layouts/enroll_main.html' %}
 
-{% block title %} Student Management System {% endblock title %}
-<!-- Specific CSS goes HERE -->
-{% block stylesheets %}
-{% endblock stylesheets %}
+    {% block title %} Student Management System {% endblock title %}
+    <!-- Specific CSS goes HERE -->
+    {% block stylesheets %}
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet"href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.6.4/css/bootstrap-datepicker.css"type="text/css" />
+    <link rel="stylesheet"href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.6.4/css/bootstrap-datepicker.css"type="text/css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    
 
-{% block content %}
-<ol class="breadcrumb ">
-	<li><a href="{{url_for('home_blueprint.route_default')}}"><i class="fa fa-home" style="font-size: 15px;">
-				Home</i></a></li>
-	<li class="active" style="font-size: 13px;"> Fees 2022 Academic Session</li>
-</ol>
-<hr> 
-<!-- result form -->
-<div class="container">
-    <div class="table-wrapper">
-        <div class="table-title">
-            <div class="row">
-                <div class="col-sm-8">
-                    <h2><b>STATEMENT OF MARKS</b></h2> <br>
-                    <h5>Index Number : 12180068</h5> <br>
+
+    {% endblock stylesheets %}
+    {% block content %}
+    <div class="container">
+    <ol class="breadcrumb ">
+        <li><a href="{{url_for('home_blueprint.route_default')}}"><i class="fa fa-home" style="font-size: 15px;">
+                    Home</i></a></li>
+        <li class="active" style="font-size: 13px;"> Student Result</li>
+    </ol>
+    <hr style="position: relative; top: 3px; border: none; height: 2px; background: black;">				
+
+    <!-- result form -->
+    <div class="container">
+        <div class="table-wrapper">
+            <div id="whattoprint">
+                <div id="printmarks">
+                    <div class="table-title">
+                        <div class="row">
+                            <div class="col-sm-8">
+                                <h4>Statement of marks :</h4> <br> <br>
+                                <h5><b>Student Name :</b>Tshering Tobgay</h5> <br>
+                                <h5> <b>Index Number :</b>  12180068</h5> <br>
+                            </div>
+                        </div>
+                    </div>
+                    <table class="table table-bordered" style="font-size: 12px;">
+                        <thead>
+                            <tr>
+                                <th>Subject</th>
+                                <th>Class test l(10)</th>
+                                <th>Mid-term(20)</th>
+                                <th>Class test ll(10)</th>
+                                <th>Annual exam(40)</th>
+                                <th>Ca(20)</th>
+                                <th>Total (100)</th>
+
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>English</td>
+                                <td>6</td>
+                                <td>14</td>
+                                <td>8</td>
+                                <td>34.03</td>
+                                <td>15</td>
+                                <td>77.03</td>
+                            </tr>
+                            <tr>
+                                <td>Dzongkha</td>
+                                <td>5</td>
+                                <td>18</td>
+                                <td>5</td>
+                                <td>30.5</td>
+                                <td>14</td>
+                                <td>72.5</td>
+                            </tr> 
+                            <tr>
+                                <td>Business math</td>
+                                <td>7.5</td>
+                                <td>16</td>
+                                <td>18.3</td>
+                                <td>9</td>
+                                <td>35.2</td>
+                                <td>96</td>
+                            </tr>
+                            <tr>
+                                <td>Accountancy</td>
+                                <td>4</td>
+                                <td>13.5</td>
+                                <td>6.07</td>
+                                <td>29.33</td>
+                                <td>15</td>
+                                <td>67.9</td>
+                            </tr> 
+                            <tr>
+                                <td>Commerce</td>
+                                <td>6.07</td>
+                                <td>12.5</td>
+                                <td>8</td>
+                                <td>32.8</td>
+                                <td>16</td>
+                                <td>75.37</td>
+                            </tr>   
+                            <tr>
+                                <td>Economics</td>
+                                <td>5.6</td>
+                                <td>17</td>
+                                <td>4.3</td>
+                                <td>27.2</td>
+                                <td>12</td>
+                                <td>66.1</td>
+                            </tr> 
+                            <tr>
+                                <td>Percentage</td>
+                                <td colspan="6">76.30%</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                <br><br><br>
+                    <h3 class="card-title">Student Individual Remarks :</h3> <br>
+                    <table class="table table-bordered" style="font-size: 12px;">
+                        <thead>
+                            <tr>
+                                <th>sl.no</th>
+                                <th>Personal Qualities</th>
+                                <th>Rating</th>
+                                
+                            </tr>
+                        </thead>
+                            <tbody>
+                                <tr>
+                                    <td>1</td>
+                                    <td>Punctuality :</td>
+                                    <td>Outstanding</td>
+                                </tr>
+                                <tr>
+                                    <td>2</td>
+                                    <td>Discipline</td>
+                                    <td>Very Good</td>
+                                </tr>
+                                <tr>
+                                    <td>3</td>
+                                    <td>Social Service</td>
+                                    <td>Very Good</td>
+                                </tr>
+                                <tr>
+                                    <td>4</td>
+                                    <td>Leadership Quality</td>
+                                    <td>Outstanding</td>
+                                </tr>
+                                <tr>
+                                    <td>5</td>
+                                    <td>SUPW Grade</td>
+                                    <td> A+</td>
+                                </tr>
+                                <tr>
+                                    <td>6</td>
+                                    <td>Result</td>
+                                    <td>PASS</td>
+                                </tr>
+                            </tbody>
+                    </table>
                 </div>
             </div>
         </div>
-        <table class="table table-bordered">
-            <thead>
-                <tr>
-                    <th>SUBJECT</th>
-                    <th>CA (20)</th>
-                    <th>PRACTICAL(20)</th>
-                    <th>THEORY(60)</th>
-                    <th>TOTAL</th>
-
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td>English</td>
-                    <td>19</td>
-                    <td>19</td>
-                    <td>50</td>
-                    <td>70</td>
-                </tr>
-                <tr>
-                    <td>Dzongkha</td>
-                    <td>19</td>
-                    <td>19</td>
-                    <td>50</td>
-                    <td>70</td>
-                </tr> 
-                <tr>
-                    <td>Business math</td>
-                    <td>19</td>
-                    <td>19</td>
-                    <td>50</td>
-                    <td>70</td>
-                </tr>
-                <tr>
-                    <td>Accountancy</td>
-                    <td>19</td>
-                    <td>19</td>
-                    <td>50</td>
-                    <td>70</td>
-                </tr> 
-                <tr>
-                    <td>Commerce</td>
-                    <td>19</td>
-                    <td>19</td>
-                    <td>50</td>
-                    <td>70</td>
-                </tr>   
-                <tr>
-                    <td>Economics</td>
-                    <td>19</td>
-                    <td>19</td>
-                    <td>50</td>
-                    <td>70</td>
-                </tr>
-                <tr>
-                    <td>SUPW :</td>
-                    <td>A+</td>
-                </tr>
-                <tr>
-                    <td>RESULT :</td>
-                    <td>Pass Certificated Awarded</td>
-                </tr>        
-            </tbody>
-        </table>
-        <hr>
-        <h4 class="card-title">Student Individual Remarks</h4>
-        <p><b>Punctuality:</b> Outstanding</p>
-        <p><b>Discipline:</b> Very Good</p>
-        <p><b>Social Service:</b> Outstanding</p>
-        <p><b>Leadership Quality:</b> Outstanding</p>
+    </div>   
+    <div style="text-align: center; ">
+        <button class="btn btn-primary"><a href="javascript:generatePDF()" id="ResultDownload" style="color:white ; text-decoration: none;"><i class="fa fa-download"></i> Download</a></button>
+        <button onclick="ForPrinting ('printmarks')" class="btn btn-primary "><i class="fa fa-print"></i> print Result</button>
     </div>
 </div> 
-   
-{% endblock content %}
+    {% endblock content %}
 
-<!-- Specific JS goes HERE -->
-{% block javascripts %}
+    <!-- Specific JS goes HERE -->
+    {% block javascripts %}
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.3.4/jspdf.debug.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.3.4/jspdf/min.js"></script>
 
-{% endblock javascripts %}
+    <script>  
+    // script for print
+    function ForPrinting(el){
+        var restorepage = document.body.innerHTML;
+        var forprinting = document.getElementById(el).innerHTML;
+        document.body.innerHTML = forprinting;
+        window.print();
+        document.body.innerHTML = restorepage;
+    }
+
+            // DOWNLOAD
+    async function generatePDF() {
+        document.getElementById("ResultDownload").innerHTML = "Downloading";
+            // download
+        var downloading = document.getElementById("whattoprint");
+        var doc = new jsPDF('l', 'pt','a4');
+
+        await html2canvas(downloading, {
+        allowTaint: true,
+        useCORS: true,
+        }).then((canvas) =>{
+        doc.addImage(canvas.toDataURL("image/png"), 'PNG', 100, 10, 600, 400);
+        })
+        doc.save("Document.pdf");
+        // DOWNLOADING CODE
+        document.getElementById("ResultDownload").innerHTML = "Downloading";
+    }
+    </script>
+    {% endblock javascripts %}
+</body>
