--- a/app/admin/templates/pages/user-management/add-new-user.html
+++ b/app/admin/templates/pages/user-management/add-new-user.html
@@ -66,6 +66,7 @@
                                                             <option value="">Select Role</option>
                                                             <option value="admin">Administrator</option>
                                                             <option value="class_teacher">Class Teacher</option>
+                                                            <option value="human_resource">Human Resource</option>
                                                         </select>
                                                     </div>
                                                 </div>
@@ -135,9 +136,6 @@
                                         <button type="button" id="save" class="btn btn-primary">Save</button>
                                     </div>
                                 </form>
-
-
-
                             </div>
                         </div>
                     </div>
