--- a/app/class_teacher/templates/pages/add-student/student_detail.html
+++ b/app/class_teacher/templates/pages/add-student/student_detail.html
@@ -58,10 +58,8 @@
                                                 <div class="col-md-7">
                                                     <div class="card p-3 py-4">
                                                         <div class="text-center">
-                                                            <a href="{{ std.half_photo }}" class="image-popup"
-                                                                title="Passport Size Photo">
-                                                                <img src="{{ std.half_photo }}" width="150px"
-                                                                    height="140px" class="rounded-circle">
+                                                            <a href="{{ std.half_photo }}" class="image-popup" title="Passport Size Photo">
+                                                                <img src="{{ std.half_photo }}" width="150px" height="140px" class="rounded-circle">
                                                             </a>
                                                         </div>
                                                         <div class="text-center mt-3">
@@ -77,7 +75,6 @@
                                             </div>
                                         </div>
                                     </div>
-
                                     <div id="marks_std" class="container tab-pane fade">
                                         <div class="card-body">
                                             <div class="row">
@@ -473,7 +470,7 @@
 
 
 
-    // ==================================================
+    // ================================================== //
   
  $('#view-res').click(function(){
         $('#viewtableresuslt').DataTable({
