--- a/app/class_teacher/templates/partials/_class_sidebar.html
+++ b/app/class_teacher/templates/partials/_class_sidebar.html
@@ -33,6 +33,19 @@
         </ul>
       </div>
     </li>
+    <li class="nav-item">
+      <a class="nav-link" data-toggle="collapse" href="#form-table" aria-expanded="false" aria-controls="form-table">
+        <i class="icon-columns menu-icon"></i>
+        <span class="menu-title">Time Table</span>
+        <i class="menu-arrow"></i>
+      </a>
+      <div class="collapse" id="form-table">
+        <ul class="nav flex-column sub-menu" style="background: white;">
+          <li class="nav-item"><a class="nav-link" href="{{url_for('class_teacher_blueprint.get_student_timetable')}}" style="color: #5c5656;">Upload Time Table</a></li>
+          <li class="nav-item"><a class="nav-link" href="{{url_for('class_teacher_blueprint.upload_studenttimetable')}}" style="color: #5c5656;">Student Time Table</a></li>
+        </ul>
+      </div>
+    </li>
     
   </ul>
 </nav>
