--- a/app/home/templates/layouts/signin.html
+++ b/app/home/templates/layouts/signin.html
@@ -7,7 +7,7 @@
 	<meta name="description" content="">
 	<meta name="author" content="Sergey Pozhilov (GetTemplate.com)">
 
-	<title>Admin login</title>
+	<title>Users login</title>
 
 	<link rel="shortcut icon" href="../static/images/gt_favicon.png">
 
