--- a/app/home/templates/partials/_footerhome.html
+++ b/app/home/templates/partials/_footerhome.html
@@ -30,7 +30,7 @@
                         <p class="follow-me-icons">
                             <a href="https://www.facebook.com/groups/42276304044" class="fa fa-facebook"></a>
                             <a href="https://www.ugyenacademy.edu.bt/" class="fa fa-google"></a>
-                            <a href="#" class="fa fa-youtube"></a>
+                            <a href="https://www.youtube.com/" class="fa fa-youtube"></a>
                             <a href="https://www.instagram.com/explore/locations/289197644/ugyen-academy-punakha/" class="fa fa-instagram"></a>
 
                         </p>	
