--- a/app/admin/templates/pages/student-applications/studentinfo.html
+++ b/app/admin/templates/pages/student-applications/studentinfo.html
@@ -52,13 +52,11 @@
                                 </ul>
                                 <div class="connected-line"></div>
                                 <!-- Tab panes -->
-                               
                                     <form method="POST" id="update_form" class="seminor-login-form" action=""
                                         enctype="multipart/form-data">
                                         <div class="tab-content">
                                         <div id="studentDetail" class="container tab-pane active">
                                             <!-- forst display -->
-
                                             <!-- student's detail -->
                                             <div class="student">
                                                 <div class="container mt-0">
@@ -145,7 +143,7 @@
                                                                     class="form-control" name="email_add" id="email_add"
                                                                     disabled>
                                                             </div>
-                                                        </div>
+                                                      </div>
                                                     </div>
                                                     <div class="col-md-6">
                                                         <div class="form-group row">
@@ -376,8 +374,7 @@
                                                         <div class="modal-content">
                                                             <div class="modal-header">
                                                                 <h5 class="modal-title" id="exampleModalLabel">
-                                                                    Student
-                                                                    Marksheet</h5>
+                                                                    Student Marksheet</h5>
                                                                 <button type="button" class="close" data-dismiss="modal"
                                                                     aria-label="Close">
                                                                     <span aria-hidden="true">&times;</span>
@@ -454,16 +451,6 @@
                                             </div> <br><br><br>
 
                                         </div>
-
-                                        <!-- <div style="text-align: center; ">
-                                            <button class="btn btn-primary"><a href="javascript:generatePDF()"
-                                                    id="downloadpages" style="color:white ; text-decoration: none;"><i
-                                                        class="fa fa-download" aria-hidden="true"></i>
-                                                    Download</a></button>
-                                            <button onclick="printContent ('happycoding')" class="btn btn-primary"><i
-                                                    class="fa fa-print" aria-hidden="true"></i> Print
-                                                Result</button>
-                                        </div> -->
                                         <div id="actions" class="container tab-pane fade">
                                             <!-- final display -->
                                             <div class="row">
@@ -512,8 +499,6 @@
                                         </div>
                                     </div>
                                     </form>
-                               
-                               
                             </div>
                         </div>
                     </div>
