--- a/app/admin/templates/pages/user-management/user-list.html
+++ b/app/admin/templates/pages/user-management/user-list.html
@@ -3,8 +3,7 @@
 {% block title %} Dashboard For Bank Users {% endblock title %}
 <!-- Specific CSS goes HERE -->
 {% block stylesheets %}
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
 {% endblock stylesheets %}
 
 {% block content %}
@@ -26,9 +25,8 @@
                         <div class="card-body">
                             <div class="row">
                                 <div class="table-responsive">
-                                    <table class="table align-items-center table-flush" id="customerList"
-                                        style="width: 100%;">
-                                        <thead class="thead-light">
+                                    <table class="table align-items-center table-flush" id="customerList" style="width: 100%;">
+                                            <thead class="thead-light">
                                             <tr>
                                                 <th scope="col" class="sort" data-sort="name">SL</th>
                                                 <th scope="col" class="sort" data-sort="name">Username</th>
@@ -49,8 +47,7 @@
         </div>
     </div>
 
-    <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
-        aria-hidden="true">
+    <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-hidden="true" data-target="#exampleModal">
         <div class="modal-dialog" role="document">
             <form action="" id="updating_info">
                 <div class="modal-content">
@@ -86,6 +83,7 @@
                                                 <option value="class_teacher">Class Teacher</option>
                                                 <option value="admin">Administrator</option>
                                                 <option value="subject_teacher">Subject Teacher</option>
+                                                <option value="human_resource">Human Resource</option>
                                             </select>
                                         </div>
                                     </div>
@@ -130,10 +128,10 @@
                 {
                     "render": function (data, type, full, meta) {
                         return '<div class="dropdown">' +
-                            '<a class="btn btn-primary btn-icon-only text-light" href="#" onclick="editUser(\'' + full.id + '\')" role="button" style="height: auto; display: inline-block;" >' +
+                            '<a class="btn btn-primary btn-icon-only text-light" data-toggle="modal" data-target="#exampleModal" onclick="editUser(\'' + full.id + '\')" role="button" style="height: auto; display: inline-block;" >' +
                             '<b> Edit </b >' +
                             '</a>' +
-                            '   <a class="btn btn-danger btn-icon-only text-light" href="#"  onclick="deleteUser(\'' + full.id + '\) role="button">' +
+                            '   <a class="btn btn-danger btn-icon-only text-light" href="javascript:void(0)"  onclick="deleteUser(\'' + full.id + '\')" role="button">' +
                             '<b>Delete</b>' +
                             '</a>' +
                             '</div>'
@@ -150,6 +148,7 @@
             "ordering": false
         });
     }
+    // edit button
     function editUser(id) {
         $.get('/edit-user/' + id, function (res) {
             const { data } = res
@@ -182,7 +181,7 @@
                     })
                 } else {
                     swal('Success', 'Successfully Updated', 'success').then(function () {
-                        window.location = ""
+                        location.reload()
                     })
                 }
 
@@ -198,7 +197,6 @@
 
     // for deleting
     function deleteUser(id) {
-        alert('jiii')
         swal({
             title: "Are you sure?",
             text: "You will not be able to recover this data!",
@@ -206,29 +204,33 @@
             showCancelButton: true,
             showConfirmButton: true
         }).then(function (isConfirm) {
-            if (isConfirm.value == true) {
+            if (isConfirm == true) {
                 $.ajax({
-                    url: '/delete/' + id,
+                    url: '/delete_list/' + id,
                     type: 'POST',
-                    success: function () {
-                        swal({
+                    success: function (res) {
+                        console.log(res)
+                        if(res === "done"){
+                            swal({
                             title: 'Success!',
                             text: 'User delete successful!',
                             type: 'success'
                         }).then(function () {
-                            loadUsers();
+                            location.reload()
                         });
+                        }
+                        else{
+                        }
                     },
                     error: function () {
                         swal("Error", "Error while deleting user. Refresh page and try again :)", "error");
                     }
                 })
-
             } else {
                 swal("Cancelled", "Your data is safe :)", "error");
             }
         })
     }
-
+    // closing modal
 </script>
 {% endblock javascripts %}
