--- a/app/class_teacher/templates/pages/add-student/student_list_class.html
+++ b/app/class_teacher/templates/pages/add-student/student_list_class.html
@@ -29,8 +29,6 @@
                         <hr>
                         <div class="card-body">
                             <input type="hidden" id="user_id" name="user_id" value="{{current_user.id}}">
-
-
                             <div class="row">
                                 <div class="table-responsive">
                                     <table class="table align-items-center table-flush" id="customerList">
@@ -41,48 +39,10 @@
                                                 <th scope="col" class="sort" data-sort="budget">CID</th>
                                                 <th scope="col" class="sort" data-sort="name">Student Name</th>
                                                 <th scope="col" class="sort" data-sort="name">Email</th>
-                                                <th scope="col">action</th>
+                                                <th scope="col" style="text-align:center">action</th>
                                             </tr>
                                         </thead>
-                                        <tbody class="list">
 
-                                            {% for usr in user %}
-
-                                            <tr>
-                                                <th scope="row">
-                                                    {{ loop.index }}
-                                                </th>
-                                                <th scope="row">
-                                                    {{ usr.username }}
-                                                </th>
-                                                <td class="budget">
-                                                    {{ usr.email}}
-                                                </td>
-                                                <td class="budget">
-                                                    {{ usr.subject}}
-                                                </td>
-                                                <td class="budget">
-                                                    {{ usr.role }}
-                                                </td>
-
-                                                <td class="text-right">
-                                                    <div class="dropdown">
-                                                        <a class="btn btn-sm btn-icon-only text-light" href="#"
-                                                            role="button" data-toggle="dropdown" aria-haspopup="true"
-                                                            aria-expanded="false">
-                                                            <i class="fas fa-ellipsis-v"></i>
-                                                        </a>
-                                                        <div
-                                                            class="dropdown-menu dropdown-menu-right dropdown-menu-arrow">
-                                                            <a class="dropdown-item"
-                                                                href="/view-std-detail/{{ std.id }}">View</a>
-                                                            <a class="dropdown-item" href="javascript:void(0)"
-                                                                onclick="deleteUser('{{ std.id }}')">Delete</a>
-                                                        </div>
-                                                    </div>
-                                                </td>
-                                            </tr>
-                                            {% endfor %}
                                         </tbody>
                                     </table>
 
@@ -118,6 +78,7 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
     crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 <script>
     $(document).ready(function () {
         loadUsers()
@@ -141,19 +102,14 @@
                 {
                     "render": function (data, type, full, meta) {
                         return '<div class="dropdown">' +
-                            '<a class="btn btn-sm btn-icon-only text-light" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="background:orange">' +
-                            '<b>Click</b>' +
-                            '</a>' +
-                            '<div class="dropdown-menu dropdown-menu-right dropdown-menu-arrow">' +
-                            '<a class="dropdown-item" href="/view-std-detail/' + full.id + '">View</a>' +
-                            '<a class="dropdown-item" href="javascript:void(0)" onclick="deleteUser(' + full.id + ')">Delete</a>' +
-                            '</div>' +
+                                    '<a class="btn btn-success btn-icon-only text-light" href="/view-std-detail/' + full.id + '">View</a>' +
+                                    '  <a class="btn btn-danger btn-icon-only text-light" href="javascript:void(0)"  onclick="deleteStudent(\'' + full.id + '\')">Delete</a>' +
                             '</div>'
                     }
                 },
             ],
             language: {
-                paginate: {
+                paginate: {                                                                                                  
                     next: '&#8594;', // or '→'
                     previous: '&#8592;' // or '←' 
                 }
@@ -162,9 +118,8 @@
         });
     }
 
-
-    // for deleting
-    function deleteUser(id) {
+//   delete student list  
+    function deleteStudent(id) {
         swal({
             title: "Are you sure?",
             text: "You will not be able to recover this data!",
@@ -172,24 +127,27 @@
             showCancelButton: true,
             showConfirmButton: true
         }).then(function (isConfirm) {
-            if (isConfirm.value == true) {
+            if (isConfirm == true) {
                 $.ajax({
-                    url: '/delete/' + id,
+                    url: '/deleteStudentList/' + id,
                     type: 'POST',
-                    success: function () {
-                        swal({
+                    success: function (res) {
+                        if(res === "done"){
+                            swal({
                             title: 'Success!',
                             text: 'User delete successful!',
                             type: 'success'
                         }).then(function () {
-                            loadUsers();
+                            location.reload()
                         });
+                        }
+                        else{
+                        }
                     },
                     error: function () {
                         swal("Error", "Error while deleting user. Refresh page and try again :)", "error");
                     }
                 })
-
             } else {
                 swal("Cancelled", "Your data is safe :)", "error");
             }
