--- a/app/class_teacher/templates/pages/user-management/teacher-list.html
+++ b/app/class_teacher/templates/pages/user-management/teacher-list.html
@@ -22,7 +22,6 @@
                 <div class="card">
                     <div class="card-body">
                         <h4 class="card-title">Class Teacher Detail</h4>
-                        
                         <hr>
                         <div class="card-body">
                             <div class="row">
@@ -41,41 +40,6 @@
                                                 <th scope="col" style="text-align:center">action</th>
                                             </tr>
                                         </thead>
-                                        <tbody class="list">
-                                            
-                                            {% for usr in user %}
-                                            
-                                            <tr>
-                                                <th scope="row">
-                                                    {{ loop.index }}
-                                                </th>
-                                                <th scope="row">
-                                                    {{ usr.username }}
-                                                </th>
-                                                <td class="budget">
-                                                    {{ usr.email}}
-                                                </td>
-                                                <td class="budget">
-                                                    {{ usr.subject}}
-                                                </td>
-                                                <td class="budget">
-                                                    {{usr.grade}} 
-                                                </td>
-                                                <td class="budget">
-                                                    {{usr.section}} 
-                                                </td>
-                                                <td class="budget">
-                                                    {{ usr.role }}
-                                                </td>
-                                                <td class="text-right">
-                                                    <div class="dropdown">
-                                                        <a class="btn btn-primary text-light" data-toggle="modal" data-target="#exampleModalCenter" role="button"> <i class="fas fa-ellipsis-v" >Edit</i></a>
-                                                        <a class="btn btn-sm btn-danger text-light" role="button" title="Delete" data-toggle="tooltip" id="{{row.id}}"> <i class="fas fa-ellipsis-v">Delete</i></a>
-                                                    </div>
-                                                </td>
-                                            </tr>
-                                            {% endfor %}
-                                        </tbody>
                                     </table>
                                 </div>
                             </div>
@@ -88,77 +52,73 @@
         <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
             <div class="modal-dialog modal-dialog-centered" role="document">
             <div class="modal-content">
-                <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLongTitle"></h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
-                </div>
-                <div class="modal-body">
+                <form action="#" id="list_classteacher">
+                    <div class="modal-header">
+                            <h5 class="modal-title" id="exampleModalLongTitle"></h5>
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                    </div>
+                    <div class="modal-body">
                         <div class="pl-lg-4">
                                     <div class="row">
                                         <div class="col-lg-6">
                                             <div class="form-group">
+                                                <input type="hidden" id="uu_id" name="uu_id">
                                                 <label class="form-control-label"
                                                     for="username">Username</label>
-                                                <input type="text" name="username" id="username"
-                                                    class="form-control" placeholder="Username"
-                                                    autocomplete="off">
+                                                <input type="text" name="username" id="username" class="form-control" autocomplete="off">
                                             </div>
                                         </div>
                                         <div class="col-lg-6">
                                             <div class="form-group">
                                                 <label class="form-control-label" for="email">Email
                                                     address</label>
-                                                <input type="email" name="email" id="email" class="form-control"
-                                                    placeholder="email address" autocomplete="off">
+                                                <input type="email" name="email" id="email" class="form-control" autocomplete="off">
                                             </div>
                                         </div>
                                     </div>
                                     <div class="row">
                                         <div class="col-lg-6">
                                             <div class="form-group">
-                                                <label class="form-control-label"
-                                                    for="subject">Subject</label>
-                                                <input type="text" name="subject" id="subject"
-                                                    class="form-control" autocomplete="off">
+                                                <label class="form-control-label" for="subject">Subject</label>
+                                                <input type="text" name="subject" id="subject" class="form-control" autocomplete="off">
                                             </div>
                                         </div>
                                         <div class="col-lg-6">
                                             <div class="form-group">
-                                                <label class="form-control-label" for="class"> Class</label>
-                                                <select name="grade" id="class" class="form-control">
-                                                    <option value="">--select--</option>
-                                                    <option value="">XII</option>
-                                                    <option value="">XI</option>
-                                                    <option value="">X</option>
-                                                    <option value="">IX</option>
-                                                    <option value="">VIII</option>
-                                                    <option value="">VII</option>   
+                                                <label class="form-control-label" for="grade"> Class</label>
+                                                <select name="grade" id="grade" class="form-control">
+                                                    <option value="XII">XII</option>
+                                                    <option value="XI">XI</option>
+                                                    <option value="X">X</option>
+                                                    <option value="IX">IX</option>
+                                                    <option value="VIII">VIII</option>
+                                                    <option value="VII">VII</option>   
                                                 </select>
                                             </div>
                                         </div>
                                         <div class="col-lg-6">
                                             <div class="form-group">
-                                                <label class="form-control-label" for="class"> Section</label>
+                                                <label class="form-control-label" for="section"> Section</label>
                                                 <select name="section" id="section" class="form-control">
-                                                    <option value="">--select--</option>
-                                                    <option value="">A</option>
-                                                    <option value="">B</option>
-                                                    <option value="">C</option>
-                                                    <option value="">D</option>
-                                                    <option value="">E</option>
-                                                    <option value="">F</option>   
+                                                    <option value="A">A</option>
+                                                    <option value="B">B</option>
+                                                    <option value="C">C</option>
+                                                    <option value="D">D</option>
+                                                    <option value="E">E</option>
+                                                    <option value="F">F</option>   
                                                 </select>
                                             </div>
                                         </div>  
+                                </div>
                             </div>
+                        </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                        <button type="button" class="btn btn-primary" id="update_teacherlist">Update</button>
                     </div>
-                </div>
-                <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-primary" id="update">Update</button>
-                </div>
+                </form>
             </div>
             </div>
         </div>
@@ -168,11 +128,9 @@
 
 <!-- Specific JS goes HERE -->
 {% block javascripts %}
-<script src="https://code.jquery.com/jquery-3.3.1.min.js"
-    integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-    crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" 
+crossorigin="anonymous"></script>
+<script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 <script>
     $(document).ready(function () {
         loadUsers()
@@ -198,11 +156,11 @@
                 {
                     "render": function (data, type, full, meta) {
                         return '<div class="dropdown">' +
-                                '<a class="btn btn-primary btn-icon-only text-light" href="#" role="button" style="height: auto; display: inline-block;" data-toggle="modal" data-target="#exampleModalCenter" >' +
+                                '<a class="btn btn-primary btn-icon-only text-light" href="#" role="button" onclick="EditTeacher(\'' + full.id + '\')" style="height: auto; display: inline-block;" data-toggle="modal" data-target="#exampleModalCenter" >' +
                                 '<b> Edit </b >'  +
                                 '</a>' + 
-                                '   <a class="btn btn-danger btn-icon-only text-light" href="#" role="button">' +
-                                '<b>Delete</b>' +
+                                ' <a class="btn btn-danger btn-icon-only text-light" href="javascript:void(0)"  onclick="deleteTeacherList(\'' + full.id + '\')" role="button">' +
+                                '<b> Delete</b>' +
                                 '</a>' +
                             '</div>'
                     }
@@ -218,9 +176,55 @@
         });
     }
 
+   // edit button
+   function EditTeacher(id) {
+        $.get('/edit_teacher/' + id, function (res) {
+            const { data } = res
+            // if response is json load modal and show data in field
+            $("#exampleModal").modal('show');
+            $("#username").val(data[0].username);
+            $("#email").val(data[0].email);
+            $("#subject").val(data[0].subject);
+            $("#grade").val(data[0].grade);
+            $("#section").val(data[0].section);
+            $("#role").val(data[0].role);
+            $("#uu_id").val(data[0].id);
 
-    // for deleting
-    function deleteUser(id) {
+        })
+    }
+    // updating teacher
+    $("#update_teacherlist").click(function () {
+        var form_data = new FormData($('#list_classteacher')[0])
+        $.ajax({
+            type: "POST",
+            url: "/updating_teacherlist",
+            data: form_data,
+            contentType: false,
+            cache: false,
+            processData: false,
+
+            success: function (data) {
+                if (data === "errorFound") {
+                    swal('Error', 'Could Not Update ', 'error').then(function () {
+                        location.reload()
+                    })
+                } else {
+                    swal('Success', 'Successfully Updated', 'success').then(function () {
+                        location.reload()
+                    })
+                }
+
+            },
+            error: function () {
+                swal('Error', 'Could Not Add Student', 'error').then(function () {
+                    location.reload()
+                })
+            }
+        });
+    });
+    // teacher delete
+
+    function deleteTeacherList(id) {
         swal({
             title: "Are you sure?",
             text: "You will not be able to recover this data!",
@@ -228,52 +232,32 @@
             showCancelButton: true,
             showConfirmButton: true
         }).then(function (isConfirm) {
-            if (isConfirm.value == true) {
+            if (isConfirm == true) {
                 $.ajax({
-                    url: '/delete/' + id,
+                    url: '/deleteTeacher/' + id,
                     type: 'POST',
-                    success: function () {
-                        swal({
+                    success: function (res) {
+                        console.log(res)
+                        if(res === "done"){
+                            swal({
                             title: 'Success!',
                             text: 'User delete successful!',
                             type: 'success'
                         }).then(function () {
-                            loadUsers();
+                            location.reload()
                         });
+                        }
+                        else{
+                        }
                     },
                     error: function () {
                         swal("Error", "Error while deleting user. Refresh page and try again :)", "error");
                     }
                 })
-
             } else {
                 swal("Cancelled", "Your data is safe :)", "error");
             }
         })
     }
-
-    $("#update").on("click", function () {
-        var form = document.getElementById("user-form");
-        var data = new FormData(form);
-        $.ajax({
-            type: 'POST',
-            url: '/save-user',
-            data: data,
-            contentType: false,
-            cache: false,
-            processData: false,
-
-            success: function (res) {
-                swal("Information successfully saved", "Click Ok to continue", "success")
-                    .then(function () {
-                        $('#user-form').trigger('reset')
-                        window.location = "/teacher-list"
-                    })
-
-            },
-        });
-    });
-
-
 </script>
 {% endblock javascripts %}
